--- a/src/telemetry/CMakeLists.txt
+++ b/src/telemetry/CMakeLists.txt
@@ -5,6 +5,7 @@ set(telemetry_src_files
 
 add_library(telemetry_lib STATIC ${telemetry_src_files})
 target_link_libraries(telemetry_lib mg-requests mg-kvstore mg-utils)
-if (BUILD_FOR_DOCKER)
-  target_compile_definitions(telemetry_lib PRIVATE DOCKER_BUILD)
+option(TELEMETRY_ID STRING)
+if (TELEMETRY_ID)
+  target_compile_definitions(telemetry_lib PRIVATE TELEMETRY_ID=${TELEMETRY_ID})
 endif()
